// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EpdgTable should render drawer successfully after clicking the Add button 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-13 jNQPNk"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="display: flex; justify-content: flex-end;"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
          type="button"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          >
            <div
              class="ant-pro-table-list-toolbar-container"
            >
              <div
                class="ant-pro-table-list-toolbar-left"
              />
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="ant-pro-table-list-toolbar-setting-item"
                      >
                        <svg>
                          SettingsOutlined.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              Domain
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              IP Address
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="a.b.com"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-radio-wrapper"
                              >
                                <span
                                  class="ant-radio"
                                >
                                  <input
                                    class="ant-radio-input"
                                    type="radio"
                                    value=""
                                  />
                                  <span
                                    class="ant-radio-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              a.b.com
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              1.1.1.1
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EpdgTable should render drawer successfully after clicking the Delete button 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-13 jNQPNk"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="display: flex; justify-content: flex-end;"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
          type="button"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          >
            <div
              class="ant-pro-table-list-toolbar-container"
            >
              <div
                class="ant-pro-table-list-toolbar-left"
              />
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="ant-pro-table-list-toolbar-setting-item"
                      >
                        <svg>
                          SettingsOutlined.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-table-alert"
          >
            <div
              class="ant-alert ant-alert-info ant-alert-no-icon"
              data-show="true"
              role="alert"
            >
              <div
                class="ant-alert-content"
              >
                <div
                  class="ant-alert-message"
                >
                  <div
                    class="ant-pro-table-alert-info"
                  >
                    <div
                      class="ant-pro-table-alert-info-content"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 32px;"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 6px;"
                            >
                              <span>
                                1 selected
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__CloseButton-sc-1abm7iv-5 dRUGlG"
                                data-id="table-clear-btn"
                                title="Clear selection"
                                type="button"
                              >
                                <svg>
                                  CancelCircle.svg
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 0px;"
                            >
                              <button
                                class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                type="button"
                              >
                                Edit
                              </button>
                            </div>
                            <span
                              class="ant-space-item-split"
                              style="margin-right: 0px;"
                            >
                              <div
                                class="ant-divider ant-divider-vertical styledComponents__Divider-sc-1abm7iv-14 jcXayc"
                                role="separator"
                              />
                            </span>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                type="button"
                              >
                                Delete
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              Domain
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              IP Address
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                            data-row-key="init.aaa.com"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column ant-table-cell-row-hover"
                            >
                              <label
                                class="ant-radio-wrapper ant-radio-wrapper-checked"
                              >
                                <span
                                  class="ant-radio ant-radio-checked"
                                >
                                  <input
                                    class="ant-radio-input"
                                    type="radio"
                                    value=""
                                  />
                                  <span
                                    class="ant-radio-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-row-hover"
                            >
                              init.aaa.com
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-row-hover"
                            >
                              10.10.10.10
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first ant-table-cell-row-hover"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EpdgTable should render drawer successfully after clicking the Edit button 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-13 jNQPNk"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="display: flex; justify-content: flex-end;"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
          type="button"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          >
            <div
              class="ant-pro-table-list-toolbar-container"
            >
              <div
                class="ant-pro-table-list-toolbar-left"
              />
              <div
                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="ant-pro-table-list-toolbar-setting-item"
                      >
                        <svg>
                          SettingsOutlined.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-table-alert"
          >
            <div
              class="ant-alert ant-alert-info ant-alert-no-icon"
              data-show="true"
              role="alert"
            >
              <div
                class="ant-alert-content"
              >
                <div
                  class="ant-alert-message"
                >
                  <div
                    class="ant-pro-table-alert-info"
                  >
                    <div
                      class="ant-pro-table-alert-info-content"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 32px;"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 6px;"
                            >
                              <span>
                                1 selected
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__CloseButton-sc-1abm7iv-5 dRUGlG"
                                data-id="table-clear-btn"
                                title="Clear selection"
                                type="button"
                              >
                                <svg>
                                  CancelCircle.svg
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 0px;"
                            >
                              <button
                                class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                type="button"
                              >
                                Edit
                              </button>
                            </div>
                            <span
                              class="ant-space-item-split"
                              style="margin-right: 0px;"
                            >
                              <div
                                class="ant-divider ant-divider-vertical styledComponents__Divider-sc-1abm7iv-14 jcXayc"
                                role="separator"
                              />
                            </span>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="styledComponents__ActionButton-sc-1abm7iv-6 fNiKLL"
                                type="button"
                              >
                                Delete
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                          <col />
                          <col />
                          <col
                            style="width: 32px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              Domain
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell react-resizable"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              IP Address
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                            <th
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="styledComponents__ResizableHover-sc-1abm7iv-9"
                              />
                              <div
                                class="styledComponents__ResizableHandle-sc-1abm7iv-10"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                            data-row-key="init.aaa.com"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column ant-table-cell-row-hover"
                            >
                              <label
                                class="ant-radio-wrapper ant-radio-wrapper-checked"
                              >
                                <span
                                  class="ant-radio ant-radio-checked"
                                >
                                  <input
                                    class="ant-radio-input"
                                    type="radio"
                                    value=""
                                  />
                                  <span
                                    class="ant-radio-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-row-hover"
                            >
                              init.aaa.com
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-row-hover"
                            >
                              10.10.10.10
                            </td>
                            <td
                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first ant-table-cell-row-hover"
                              style="position: sticky; right: 0px;"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                  unselectable="unselectable"
                >
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
